#2828 address runner error

--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "geocoder = Nominatim()\n",
+    "geocoder = Nominatim(user_agent=\"academicpages.github.io\")\n",
     "location_dict = {}\n",
     "location = \"\"\n",
     "permalink = \"\"\n",
