--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -11,7 +11,7 @@
     "```bash\n",
     "sudo apt install jupyter\n",
     "sudo apt install python3-pip\n",
-    "pip install getorg --upgrade\n",
+    "pip install python-frontmatter getorg --upgrade\n",
     "```\n",
     "\n",
     "After which you can run this from the `_talks/` directory, via:\n",
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "# Start by installing the dependencies\n",
-    "!pip install getorg --upgrade\n",
+    "!pip install python-frontmatter getorg --upgrade\n",
+    "import frontmatter\n",
     "import glob\n",
     "import getorg\n",
     "from geopy import Nominatim"
@@ -76,17 +77,24 @@
    "source": [
     "# Perform geolocation\n",
     "for file in g:\n",
-    "    with open(file, 'r') as f:\n",
-    "        lines = f.read()\n",
-    "        if lines.find('location: \"') > 1:\n",
-    "            loc_start = lines.find('location: \"') + 11\n",
-    "            lines_trim = lines[loc_start:]\n",
-    "            loc_end = lines_trim.find('\"')\n",
-    "            location = lines_trim[:loc_end]\n",
-    "                            \n",
-    "           \n",
-    "        location_dict[location] = geocoder.geocode(location)\n",
-    "        print(location, \"\\n\", location_dict[location])\n"
+    "    # Read the file\n",
+    "    data = frontmatter.load(file)\n",
+    "    data = data.to_dict()\n",
+    "\n",
+    "    # Press on if the location is not present\n",
+    "    if 'location' not in data:\n",
+    "        continue\n",
+    "\n",
+    "    # Prepare the description\n",
+    "    title = data['title'].strip()\n",
+    "    venue = data['venue'].strip()\n",
+    "    location = data['location'].strip()\n",
+    "    description = f\"{title}\\n{venue}; {location}\"\n",
+    "    print(description)\n",
+    "\n",
+    "    # Geocode the location and report the status\n",
+    "    location_dict[description] = geocoder.geocode(location)\n",
+    "    print(description, location_dict[description])"
    ]
   },
   {
