--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Collect the Markdown files\n",
-    "g = glob.glob(\"*.md\")"
+    "g = glob.glob(\"_talks/*.md\")"
    ]
   },
   {
@@ -65,6 +65,13 @@
     "location = \"\"\n",
     "permalink = \"\"\n",
     "title = \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the event that this times out with an error, double check to make sure that the location is can be properly geolocated."
    ]
   },
   {
@@ -89,8 +96,7 @@
     "    title = data['title'].strip()\n",
     "    venue = data['venue'].strip()\n",
     "    location = data['location'].strip()\n",
-    "    description = f\"{title}\\n{venue}; {location}\"\n",
-    "    print(description)\n",
+    "    description = f\"{title}<br />{venue}; {location}\"\n",
     "\n",
     "    # Geocode the location and report the status\n",
     "    location_dict[description] = geocoder.geocode(location)\n",
@@ -107,7 +113,7 @@
    "source": [
     "# Save the map\n",
     "m = getorg.orgmap.create_map_obj()\n",
-    "getorg.orgmap.output_html_cluster_map(location_dict, folder_name=\"../talkmap\", hashed_usernames=False)"
+    "getorg.orgmap.output_html_cluster_map(location_dict, folder_name=\"talkmap\", hashed_usernames=False)"
    ]
   },
   {
