adding first post

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,13 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: 'How Neural Networks Work'
+date: 2025-04-15
 permalink: /posts/2012/08/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Neural Networks
+  - Gradient Descent 
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+I wrote this as I was learning about neural networks during winter break of my first year in my PhD program: December 2024. Most of the content are directly from the classic "Neural Networks and Deep Learning" textbook by Michael Nielsen, and 3Blue1Brown's videos. 
 
-Headings are cool
-======
 
-You can have many headings
-======
-
-Aren't headings cool?
-------
+[📄 View PDF File](/files/How_Neural_Networks_Work.pdf)
