--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -7,7 +7,7 @@ tags:
   - Gradient Descent 
 ---
 
-I wrote this as I was learning about neural networks during winter break of my first year in my PhD program: December 2024. Most of the content are directly from the classic "Neural Networks and Deep Learning" textbook by Michael Nielsen, and 3Blue1Brown's videos. 
+I wrote this as I was learning about neural networks during winter break of my first year in my PhD program: December 2024. Most of the content comes directly from the classic "Neural Networks and Deep Learning" textbook by Michael Nielsen, and 3Blue1Brown's videos. 
 
 
 [📄 View PDF File](/files/How_Neural_Networks_Work.pdf)
